RESOLVED FIXED135731
[Services with UI] Action menu does not appear if selection includes both text and an image
https://bugs.webkit.org/show_bug.cgi?id=135731
Summary [Services with UI] Action menu does not appear if selection includes both tex...
Enrica Casucci
Reported 2014-08-07 15:30:07 PDT
* STEPS TO REPRODUCE 0. Install a text viewer extension 1. Load the Yelp page for Nihon Whisky Lounge in San Francisco - http://www.yelp.com/biz/nihon-whisky-lounge-san-francisco#query:nihon%20whiskey%20lounge 2. Select some text + a picture 3. Click on the arrow. * RESULTS Nothing happens. Perhaps this is because a text viewer extension isn't considered valid for a selection containing an image, which would be fine, but in that case, I would expect the drop down arrow not to show up since there is no valid extension installed. Expected The arrow should not appear at all if there are no services that can handle combination of text and image. <rdar://problem/17837491>
Attachments
Patch (18.69 KB, patch)
2014-08-07 15:40 PDT, Enrica Casucci
beidson: review+
follow up patch (1.34 KB, patch)
2014-08-07 18:15 PDT, Tim Horton
dino: review+
Enrica Casucci
Comment 1 2014-08-07 15:40:53 PDT
Enrica Casucci
Comment 2 2014-08-07 16:09:16 PDT
Committed revision 172301.
Tim Horton
Comment 3 2014-08-07 18:13:18 PDT
Comment on attachment 236237 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=236237&action=review > Source/WebKit2/Shared/WebProcessCreationParameters.cpp:54 > + , hasRichContentServices(false) This needs to get filled in in WebContext::createNewWebProcess, but it doesn't! Will fix.
Tim Horton
Comment 4 2014-08-07 18:15:48 PDT
Created attachment 236250 [details] follow up patch
Tim Horton
Comment 5 2014-08-07 18:18:55 PDT
Note You need to log in before you can comment on or make changes to this bug.